# responsio-accentuum

./: .gitattributes  .gitignore  Gemfile  README.md  _config.yml  compiler.py  debug_trimming.py  dummy.html  example_usage.py  extract_isthmian_epodes.py  heatmap_ol02.py  heatmaps.py  index.html  iterations.txt  nb_baseline.ipynb  nb_baseline_lyric.ipynb  nb_baseline_prose.ipynb  nb_prepare.ipynb  nb_results.ipynb  nb_results_barys.ipynb  nb_results_comp.ipynb  nb_significance.ipynb  pyproject.toml  remove_single_strophe_cantica.py  results.py  scan_ht.py  test_make_all_lyric_baselines.py  text_matrix_ol02.py  text_matrix_ol02_strophes.py  tmp_calculate.py
.github/prompts/: planTestStatistics.prompt.md
.github/workflows/: jekyll.yml
_layouts/: default.html
assets/css/: style.css
data/: cached_prose_corpus.pkl
data/cache/: all_comp_ratios.pkl  test_statistics.pkl  (+4 more)
nb/: baseline_lyric.ipynb  baseline_prose.ipynb  nb_baseline_lyric.ipynb  nb_baseline_prose.ipynb  nb_results_barys.ipynb  nb_significance.ipynb  prepare.ipynb  results.ipynb  results_comp.ipynb  results_old.ipynb  significance.ipynb  test.ipynb
scripts/: 1_extract_pindar.py  2_compile.py  2_macronize.py  3_scan.py  a_extract.py  add_n.py  check_metre.py  extract_text.py  macronizer_mini.py  macronizer_mini_inference.py  pretty_print.py  scansion.py
src/: baseline.py  compile.py  extract.py  fix.py  generalize_scansion.py  heatmaps.py  macronize.py  macronizer_mini.py  prose.py  scan.py  scan_ht.py  scansion.py  stats.py  stats_barys.py  stats_barys_float.py  stats_comp.py  tidy.py  visualize.py
(+488 files in other folders)
