[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "responsio-accentuum"
version = "0.1.0"
description = "Prosody analysis utilities for responsio accentuum."
readme = "README.md"
authors = [{ name = "Albin Thörn Cleland" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "lxml",
  "tqdm",
  "grc-utils",
  "seaborn",
  "bs4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
